// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendVoteTransaction should render 1`] = `
<DocumentFragment>
  <div
    class="max-w-xl mx-auto"
  >
    <form
      class="space-y-8"
      data-testid="Form"
    >
      <div>
        <ul
          class="StepIndicator___StyledUl-sc-15t41is-1 dhAbBb"
        >
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 crUtTP"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
        </ul>
        <div
          class="mt-10"
        >
          <div
            data-testid="tab-pabel__active-panel"
          >
            <section
              class="space-y-8"
              data-testid="SendVoteTransaction__step--first"
            >
              <div>
                <h1
                  class="mb-0"
                >
                  Vote Transaction
                </h1>
                <p
                  class="text-theme-neutral-dark"
                >
                  Select a fee to continue
                </p>
              </div>
              <div
                class="grid grid-flow-row gap-2"
              >
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Cryptoasset
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="flex-auto text-xl font-semibold truncate text-theme-neutral-800 max-w-24"
                      >
                        ARK Ecosystem
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-1"
                  >
                    <div
                      class="sc-AxirZ cZokSJ bg-theme-background border-theme-danger-200"
                    >
                      <div
                        class="sc-AxhCb VoPpj text-theme-danger-500"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                       
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="mb-2 text-sm font-semibold text-theme-neutral-500"
                      >
                        <span
                          class="mr-1"
                        >
                          Sender
                        </span>
                        <div
                          class="sc-fzplWN gpwIyi"
                          color="warning"
                        >
                          Your address
                        </div>
                      </div>
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                          data-testid="address__wallet-name"
                        >
                          ROBank
                        </span>
                        <span
                          class="text-theme-neutral-400 font-semibold text-xl"
                          data-testid="address__wallet-address"
                        >
                          AUexKj...EVTQWK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                    data-testid="Avatar"
                  >
                    <img
                      src="data:image/svg+xml;utf8,conic-gradient(from 319.97337871728087deg at 45.70634934884662% 2.6604173895729395%, #5A67D8, calc(0 * 100% / 5), transparent 0),conic-gradient(from 423.211454467238deg at 23.584844137055434% 45.27191567997656%, #9B2C2C, calc(1 * 100% / 5), transparent 0),conic-gradient(from 173.45961978541462deg at 12.843410221681081% 77.70665235459121%, #C05621, calc(2 * 100% / 5), transparent 0),conic-gradient(from 147.81511321620997deg at 3.667163662500256% 39.46956722162267%, #F56565, calc(3 * 100% / 5), transparent 0),conic-gradient(from 385.9181364611369deg at 71.64900545368369% 62.53602050455933%, #2C7A7B, calc(4 * 100% / 5), transparent 0)"
                      title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                    />
                  </div>
                </div>
                <div
                  class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Votes
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="-my-5"
                      >
                        <div
                          class="flex items-center py-4 true "
                        >
                          <div
                            class="flex-1"
                          >
                            <div
                              class="text-sm font-semibold text-theme-neutral-500"
                            >
                               
                            </div>
                            <div
                              class="mt-2 font-semibold"
                            >
                              <div
                                class="inline-block truncate align-middle"
                              >
                                <span
                                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                                  data-testid="address__wallet-name"
                                >
                                  Delegate 1
                                </span>
                                <span
                                  class="text-theme-neutral-400 font-semibold text-xl"
                                  data-testid="address__wallet-address"
                                >
                                  FJKDSA...SJKDFJ
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                            data-testid="Avatar"
                          >
                            <img
                              src="data:image/svg+xml;utf8,conic-gradient(from 568.2025659838705deg at 46.70306697848182% 32.03085822490901%, #FBD38D, calc(0 * 100% / 5), transparent 0),conic-gradient(from 281.53128995283805deg at 85.12621337976665% 28.80444804291895%, #5A67D8, calc(1 * 100% / 5), transparent 0),conic-gradient(from 513.77543147411deg at 36.145513212707236% 79.78729991513353%, #FC8181, calc(2 * 100% / 5), transparent 0),conic-gradient(from 597.1924181721481deg at 90.2445904912289% 29.03336303566013%, #38B2AC, calc(3 * 100% / 5), transparent 0),conic-gradient(from 197.02535355738829deg at 32.51900391683814% 77.03122255827047%, #F6AD55, calc(4 * 100% / 5), transparent 0)"
                              title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                            />
                          </div>
                        </div>
                        <div
                          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
                        >
                          <div
                            class="flex-1"
                          >
                            <div
                              class="text-sm font-semibold text-theme-neutral-500"
                            >
                               
                            </div>
                            <div
                              class="mt-2 font-semibold"
                            >
                              <div
                                class="inline-block truncate align-middle"
                              >
                                <span
                                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                                  data-testid="address__wallet-name"
                                >
                                  Delegate 2
                                </span>
                                <span
                                  class="text-theme-neutral-400 font-semibold text-xl"
                                  data-testid="address__wallet-address"
                                >
                                  AhFJKD...SJKDFJ
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                            data-testid="Avatar"
                          >
                            <img
                              src="data:image/svg+xml;utf8,conic-gradient(from 272.869448850674deg at 77.58449164114022% 33.98830726713641%, #7F9CF5, calc(0 * 100% / 5), transparent 0),conic-gradient(from 334.1033088718737deg at 84.40178459007231% 17.059925375053396%, #FEB2B2, calc(1 * 100% / 5), transparent 0),conic-gradient(from 139.50358554943523deg at 6.694434343817083% 37.69537974142411%, #ED8936, calc(2 * 100% / 5), transparent 0),conic-gradient(from 40.860192724750235deg at 68.29069678970299% 29.567825600060573%, #FC8181, calc(3 * 100% / 5), transparent 0),conic-gradient(from 24.61693842743843deg at 86.02634812364855% 21.61545496915476%, #742A2A, calc(4 * 100% / 5), transparent 0)"
                              title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                            />
                          </div>
                        </div>
                        <div
                          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
                        >
                          <div
                            class="flex-1"
                          >
                            <div
                              class="text-sm font-semibold text-theme-neutral-500"
                            >
                               
                            </div>
                            <div
                              class="mt-2 font-semibold"
                            >
                              <div
                                class="inline-block truncate align-middle"
                              >
                                <span
                                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                                  data-testid="address__wallet-name"
                                >
                                  Delegate 3
                                </span>
                                <span
                                  class="text-theme-neutral-400 font-semibold text-xl"
                                  data-testid="address__wallet-address"
                                >
                                  FAhFJK...SJKDFJ
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                            data-testid="Avatar"
                          >
                            <img
                              src="data:image/svg+xml;utf8,conic-gradient(from 65.5403716378373deg at 40.01343193577338% 30.760975456059626%, #2C7A7B, calc(0 * 100% / 5), transparent 0),conic-gradient(from 204.1106359335532deg at 31.220176312383213% 61.41400320012138%, #E53E3E, calc(1 * 100% / 5), transparent 0),conic-gradient(from 384.62337467082557deg at 75.08232859288681% 63.8389968240588%, #9B2C2C, calc(2 * 100% / 5), transparent 0),conic-gradient(from 174.8116810047629deg at 5.408026736841311% 30.17827802790744%, #F6AD55, calc(3 * 100% / 5), transparent 0),conic-gradient(from 431.5712476050348deg at 17.65593017358963% 42.15021743819777%, #FEB2B2, calc(4 * 100% / 5), transparent 0)"
                              title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Transaction Fee
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="w-3/5 mr-2"
                        >
                          <div
                            class="sc-AxmLO kuiknc"
                          >
                            <input
                              class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                              data-testid="InputCurrency"
                              type="text"
                              value="25"
                            />
                            <div
                              class="absolute bottom-0 w-full px-1"
                            >
                              <div
                                class="flex flex-wrap justify-center"
                                data-testid="Range"
                              >
                                <div
                                  class="sc-fzozJi cRbOfl"
                                  data-testid="Range__track"
                                  style="transform: scale(1); cursor: pointer;"
                                >
                                  <div
                                    class="sc-fzoLsD ckpTMK"
                                    data-testid="Range__track__filled"
                                  >
                                    <div
                                      aria-valuemax="100"
                                      aria-valuemin="1"
                                      aria-valuenow="25"
                                      class="sc-fzpans dtzHyc"
                                      data-testid="Range__thumb"
                                      draggable="false"
                                      role="slider"
                                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ml-2"
                        >
                          <div
                            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                            data-testid="SelectionBar"
                            role="radiogroup"
                          >
                            <button
                              aria-checked="true"
                              class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Last
                            </button>
                            <button
                              aria-checked="false"
                              class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Min
                            </button>
                            <button
                              aria-checked="false"
                              class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Average
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="flex justify-end mt-6 space-x-3"
          >
            <button
              class="sc-AxjAm ddJBbC"
              color="primary"
              data-testid="SendVoteTransaction__button--back"
              disabled=""
              type="button"
            >
              Back
            </button>
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              data-testid="SendVoteTransaction__button--continue"
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SendVoteTransaction should render 1st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendVoteTransaction__step--first"
  >
    <div>
      <h1
        class="mb-0"
      >
        Vote Transaction
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Select a fee to continue
      </p>
    </div>
    <div
      class="grid grid-flow-row gap-2"
    >
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Cryptoasset
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="flex-auto text-xl font-semibold truncate text-theme-neutral-800 max-w-24"
            >
              ARK Ecosystem
            </div>
          </div>
        </div>
        <div
          class="ml-1"
        >
          <div
            class="sc-AxirZ cZokSJ bg-theme-background border-theme-danger-200"
          >
            <div
              class="sc-AxhCb VoPpj text-theme-danger-500"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
             
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="mb-2 text-sm font-semibold text-theme-neutral-500"
            >
              <span
                class="mr-1"
              >
                Sender
              </span>
              <div
                class="sc-fzplWN gpwIyi"
                color="warning"
              >
                Your address
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                data-testid="address__wallet-name"
              >
                ROBank
              </span>
              <span
                class="text-theme-neutral-400 font-semibold text-xl"
                data-testid="address__wallet-address"
              >
                AUexKj...EVTQWK
              </span>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
          data-testid="Avatar"
        >
          <img
            src="data:image/svg+xml;utf8,conic-gradient(from 319.97337871728087deg at 45.70634934884662% 2.6604173895729395%, #5A67D8, calc(0 * 100% / 5), transparent 0),conic-gradient(from 423.211454467238deg at 23.584844137055434% 45.27191567997656%, #9B2C2C, calc(1 * 100% / 5), transparent 0),conic-gradient(from 173.45961978541462deg at 12.843410221681081% 77.70665235459121%, #C05621, calc(2 * 100% / 5), transparent 0),conic-gradient(from 147.81511321620997deg at 3.667163662500256% 39.46956722162267%, #F56565, calc(3 * 100% / 5), transparent 0),conic-gradient(from 385.9181364611369deg at 71.64900545368369% 62.53602050455933%, #2C7A7B, calc(4 * 100% / 5), transparent 0)"
            title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
          />
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Votes
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="-my-5"
            >
              <div
                class="flex items-center py-4 true "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 1
                      </span>
                      <span
                        class="text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        FJKDSA...SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                  data-testid="Avatar"
                >
                  <img
                    src="data:image/svg+xml;utf8,conic-gradient(from 568.2025659838705deg at 46.70306697848182% 32.03085822490901%, #FBD38D, calc(0 * 100% / 5), transparent 0),conic-gradient(from 281.53128995283805deg at 85.12621337976665% 28.80444804291895%, #5A67D8, calc(1 * 100% / 5), transparent 0),conic-gradient(from 513.77543147411deg at 36.145513212707236% 79.78729991513353%, #FC8181, calc(2 * 100% / 5), transparent 0),conic-gradient(from 597.1924181721481deg at 90.2445904912289% 29.03336303566013%, #38B2AC, calc(3 * 100% / 5), transparent 0),conic-gradient(from 197.02535355738829deg at 32.51900391683814% 77.03122255827047%, #F6AD55, calc(4 * 100% / 5), transparent 0)"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
              <div
                class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 2
                      </span>
                      <span
                        class="text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        AhFJKD...SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                  data-testid="Avatar"
                >
                  <img
                    src="data:image/svg+xml;utf8,conic-gradient(from 272.869448850674deg at 77.58449164114022% 33.98830726713641%, #7F9CF5, calc(0 * 100% / 5), transparent 0),conic-gradient(from 334.1033088718737deg at 84.40178459007231% 17.059925375053396%, #FEB2B2, calc(1 * 100% / 5), transparent 0),conic-gradient(from 139.50358554943523deg at 6.694434343817083% 37.69537974142411%, #ED8936, calc(2 * 100% / 5), transparent 0),conic-gradient(from 40.860192724750235deg at 68.29069678970299% 29.567825600060573%, #FC8181, calc(3 * 100% / 5), transparent 0),conic-gradient(from 24.61693842743843deg at 86.02634812364855% 21.61545496915476%, #742A2A, calc(4 * 100% / 5), transparent 0)"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
              <div
                class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 3
                      </span>
                      <span
                        class="text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        FAhFJK...SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                  data-testid="Avatar"
                >
                  <img
                    src="data:image/svg+xml;utf8,conic-gradient(from 65.5403716378373deg at 40.01343193577338% 30.760975456059626%, #2C7A7B, calc(0 * 100% / 5), transparent 0),conic-gradient(from 204.1106359335532deg at 31.220176312383213% 61.41400320012138%, #E53E3E, calc(1 * 100% / 5), transparent 0),conic-gradient(from 384.62337467082557deg at 75.08232859288681% 63.8389968240588%, #9B2C2C, calc(2 * 100% / 5), transparent 0),conic-gradient(from 174.8116810047629deg at 5.408026736841311% 30.17827802790744%, #F6AD55, calc(3 * 100% / 5), transparent 0),conic-gradient(from 431.5712476050348deg at 17.65593017358963% 42.15021743819777%, #FEB2B2, calc(4 * 100% / 5), transparent 0)"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Transaction Fee
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="flex"
            >
              <div
                class="w-3/5 mr-2"
              >
                <div
                  class="sc-AxmLO kuiknc"
                >
                  <input
                    class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                    data-testid="InputCurrency"
                    type="text"
                    value="25"
                  />
                  <div
                    class="absolute bottom-0 w-full px-1"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="sc-fzozJi cRbOfl"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="sc-fzoLsD ckpTMK"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="1"
                            aria-valuenow="25"
                            class="sc-fzpans dtzHyc"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ml-2"
              >
                <div
                  class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                  data-testid="SelectionBar"
                  role="radiogroup"
                >
                  <button
                    aria-checked="true"
                    class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Last
                  </button>
                  <button
                    aria-checked="false"
                    class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Min
                  </button>
                  <button
                    aria-checked="false"
                    class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Average
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendVoteTransaction should render 2st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendVoteTransaction__step--second"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Review
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Review the transaction details
      </p>
    </div>
    <div
      class="grid grid-flow-row gap-2"
    >
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Cryptoasset
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="flex-auto text-xl font-semibold truncate text-theme-neutral-800 max-w-24"
            >
              ARK Ecosystem
            </div>
          </div>
        </div>
        <div
          class="ml-1"
        >
          <div
            class="sc-AxirZ cZokSJ bg-theme-background border-theme-danger-200"
          >
            <div
              class="sc-AxhCb VoPpj text-theme-danger-500"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
             
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="mb-2 text-sm font-semibold text-theme-neutral-500"
            >
              <span
                class="mr-1"
              >
                Sender
              </span>
              <div
                class="sc-fzplWN gpwIyi"
                color="warning"
              >
                Your address
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                data-testid="address__wallet-name"
              >
                ROBank
              </span>
              <span
                class="text-theme-neutral-400 font-semibold text-xl"
                data-testid="address__wallet-address"
              >
                AUexKj...EVTQWK
              </span>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
          data-testid="Avatar"
        >
          <img
            src="data:image/svg+xml;utf8,conic-gradient(from 319.97337871728087deg at 45.70634934884662% 2.6604173895729395%, #5A67D8, calc(0 * 100% / 5), transparent 0),conic-gradient(from 423.211454467238deg at 23.584844137055434% 45.27191567997656%, #9B2C2C, calc(1 * 100% / 5), transparent 0),conic-gradient(from 173.45961978541462deg at 12.843410221681081% 77.70665235459121%, #C05621, calc(2 * 100% / 5), transparent 0),conic-gradient(from 147.81511321620997deg at 3.667163662500256% 39.46956722162267%, #F56565, calc(3 * 100% / 5), transparent 0),conic-gradient(from 385.9181364611369deg at 71.64900545368369% 62.53602050455933%, #2C7A7B, calc(4 * 100% / 5), transparent 0)"
            title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
          />
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Votes
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="-my-5"
            >
              <div
                class="flex items-center py-4 true "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 1
                      </span>
                      <span
                        class="text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        FJKDSA...SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                  data-testid="Avatar"
                >
                  <img
                    src="data:image/svg+xml;utf8,conic-gradient(from 568.2025659838705deg at 46.70306697848182% 32.03085822490901%, #FBD38D, calc(0 * 100% / 5), transparent 0),conic-gradient(from 281.53128995283805deg at 85.12621337976665% 28.80444804291895%, #5A67D8, calc(1 * 100% / 5), transparent 0),conic-gradient(from 513.77543147411deg at 36.145513212707236% 79.78729991513353%, #FC8181, calc(2 * 100% / 5), transparent 0),conic-gradient(from 597.1924181721481deg at 90.2445904912289% 29.03336303566013%, #38B2AC, calc(3 * 100% / 5), transparent 0),conic-gradient(from 197.02535355738829deg at 32.51900391683814% 77.03122255827047%, #F6AD55, calc(4 * 100% / 5), transparent 0)"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
              <div
                class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 2
                      </span>
                      <span
                        class="text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        AhFJKD...SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                  data-testid="Avatar"
                >
                  <img
                    src="data:image/svg+xml;utf8,conic-gradient(from 272.869448850674deg at 77.58449164114022% 33.98830726713641%, #7F9CF5, calc(0 * 100% / 5), transparent 0),conic-gradient(from 334.1033088718737deg at 84.40178459007231% 17.059925375053396%, #FEB2B2, calc(1 * 100% / 5), transparent 0),conic-gradient(from 139.50358554943523deg at 6.694434343817083% 37.69537974142411%, #ED8936, calc(2 * 100% / 5), transparent 0),conic-gradient(from 40.860192724750235deg at 68.29069678970299% 29.567825600060573%, #FC8181, calc(3 * 100% / 5), transparent 0),conic-gradient(from 24.61693842743843deg at 86.02634812364855% 21.61545496915476%, #742A2A, calc(4 * 100% / 5), transparent 0)"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
              <div
                class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 3
                      </span>
                      <span
                        class="text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        FAhFJK...SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                  data-testid="Avatar"
                >
                  <img
                    src="data:image/svg+xml;utf8,conic-gradient(from 65.5403716378373deg at 40.01343193577338% 30.760975456059626%, #2C7A7B, calc(0 * 100% / 5), transparent 0),conic-gradient(from 204.1106359335532deg at 31.220176312383213% 61.41400320012138%, #E53E3E, calc(1 * 100% / 5), transparent 0),conic-gradient(from 384.62337467082557deg at 75.08232859288681% 63.8389968240588%, #9B2C2C, calc(2 * 100% / 5), transparent 0),conic-gradient(from 174.8116810047629deg at 5.408026736841311% 30.17827802790744%, #F6AD55, calc(3 * 100% / 5), transparent 0),conic-gradient(from 431.5712476050348deg at 17.65593017358963% 42.15021743819777%, #FEB2B2, calc(4 * 100% / 5), transparent 0)"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="my-4"
      >
        <div
          class="border rounded-lg border-theme-neutral-300"
        >
          <div
            class="relative p-3"
          >
            <div
              class="grid grid-cols-2 divide-x divide-gray-400"
            >
              <div
                class="flex flex-col justify-center px-6 py-5"
              >
                <span
                  class="text-sm text-theme-neutral-500"
                >
                  Transaction(s) Amount
                </span>
                <span
                  class="mt-3"
                  data-testid="total-amount-box__transaction-amount"
                >
                  400 ARK
                </span>
              </div>
              <div
                class="flex flex-col justify-center px-6 py-5 text-right"
              >
                <span
                  class="text-sm text-theme-neutral-500"
                >
                  Transaction fee
                </span>
                <span
                  class="mt-3 mr-2"
                  data-testid="total-amount-box__transaction-fee"
                >
                  0.09660435 ARK
                </span>
              </div>
            </div>
            <div
              class="absolute top-0 bottom-0 left-0 right-0 flex items-center justify-center h-full text-center"
            >
              <div
                class="px-1 py-2 bg-white"
              >
                <div
                  class="sc-AxhCb cMyoID"
                  height="15"
                  width="15"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-center border-t rounded-b-lg border-theme-neutral-300 justfiy-center py-7 bg-theme-neutral-100"
          >
            <span
              class="text-sm text-theme-neutral-500"
            >
              Total Amount
            </span>
            <span
              class="text-2xl font-bold"
              data-testid="total-amount-box__total"
            >
              400.09660435 ARK
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendVoteTransaction should render 3st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendVoteTransaction__step--third"
  >
    <div>
      <h1
        class="mb-0"
      >
        Authenticate
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Enter your twelve word mnemonic to authenticate the transaction
      </p>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="flex items-center py-4 true "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Mnemonic
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="sc-AxmLO kuiknc max-w-20"
              >
                <input
                  class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary pr-12"
                  data-testid="Input"
                  name="passphrase"
                  type="password"
                />
                <div
                  class="sc-AxgMl sc-Axmtr cPxyjO mr-4"
                >
                  <button
                    class="flex items-center justify-center w-full h-full text-2xl focus:outline-none bg-theme-background text-theme-primary-400"
                    data-testid="InputPassword__toggle"
                    type="button"
                  >
                    <div
                      class="sc-AxhCb fxrKLH"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        eye.svg
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendVoteTransaction should render 4st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendVoteTransaction__step--fourth"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Successful
      </h1>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="w-full mt-10"
        >
          <div
            class="sc-AxhCb iOlwQd"
            height="200"
            width="100%"
          />
        </div>
        <p
          class="text-theme-neutral-dark"
        >
          Your transaction was successfully sent. Please monitor the blockchain to ensure your transactions is confirmed and processed, The following is relevant information for your transaction.
        </p>
        <div
          class="flex items-center py-4 true "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz...MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <div
                  class="mb-1 ml-5 text-theme-primary-300"
                >
                  <div
                    class="sc-AxhCb fxrKLH"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Block ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz...MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <div
                  class="mb-1 ml-5 text-theme-primary-300"
                >
                  <div
                    class="sc-AxhCb fxrKLH"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Cryptoasset
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex-auto text-xl font-semibold truncate text-theme-neutral-800 max-w-24"
              >
                ARK Ecosystem
              </div>
            </div>
          </div>
          <div
            class="ml-1"
          >
            <div
              class="sc-AxirZ cZokSJ bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhCb VoPpj text-theme-danger-500"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
               
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="mb-2 text-sm font-semibold text-theme-neutral-500"
              >
                <span
                  class="mr-1"
                >
                  Account
                </span>
                <div
                  class="sc-fzplWN gpwIyi"
                  color="warning"
                >
                  Your address
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                  data-testid="address__wallet-name"
                >
                  ROBank
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-xl"
                  data-testid="address__wallet-address"
                >
                  AUexKj...EVTQWK
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
            data-testid="Avatar"
          >
            <img
              src="data:image/svg+xml;utf8,conic-gradient(from 319.97337871728087deg at 45.70634934884662% 2.6604173895729395%, #5A67D8, calc(0 * 100% / 5), transparent 0),conic-gradient(from 423.211454467238deg at 23.584844137055434% 45.27191567997656%, #9B2C2C, calc(1 * 100% / 5), transparent 0),conic-gradient(from 173.45961978541462deg at 12.843410221681081% 77.70665235459121%, #C05621, calc(2 * 100% / 5), transparent 0),conic-gradient(from 147.81511321620997deg at 3.667163662500256% 39.46956722162267%, #F56565, calc(3 * 100% / 5), transparent 0),conic-gradient(from 385.9181364611369deg at 71.64900545368369% 62.53602050455933%, #2C7A7B, calc(4 * 100% / 5), transparent 0)"
              title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
            />
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Votes
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="-my-5"
              >
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                       
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                          data-testid="address__wallet-name"
                        >
                          Delegate 1
                        </span>
                        <span
                          class="text-theme-neutral-400 font-semibold text-xl"
                          data-testid="address__wallet-address"
                        >
                          FJKDSA...SJKDFJ
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                    data-testid="Avatar"
                  >
                    <img
                      src="data:image/svg+xml;utf8,conic-gradient(from 568.2025659838705deg at 46.70306697848182% 32.03085822490901%, #FBD38D, calc(0 * 100% / 5), transparent 0),conic-gradient(from 281.53128995283805deg at 85.12621337976665% 28.80444804291895%, #5A67D8, calc(1 * 100% / 5), transparent 0),conic-gradient(from 513.77543147411deg at 36.145513212707236% 79.78729991513353%, #FC8181, calc(2 * 100% / 5), transparent 0),conic-gradient(from 597.1924181721481deg at 90.2445904912289% 29.03336303566013%, #38B2AC, calc(3 * 100% / 5), transparent 0),conic-gradient(from 197.02535355738829deg at 32.51900391683814% 77.03122255827047%, #F6AD55, calc(4 * 100% / 5), transparent 0)"
                      title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
                <div
                  class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                       
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                          data-testid="address__wallet-name"
                        >
                          Delegate 2
                        </span>
                        <span
                          class="text-theme-neutral-400 font-semibold text-xl"
                          data-testid="address__wallet-address"
                        >
                          AhFJKD...SJKDFJ
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                    data-testid="Avatar"
                  >
                    <img
                      src="data:image/svg+xml;utf8,conic-gradient(from 272.869448850674deg at 77.58449164114022% 33.98830726713641%, #7F9CF5, calc(0 * 100% / 5), transparent 0),conic-gradient(from 334.1033088718737deg at 84.40178459007231% 17.059925375053396%, #FEB2B2, calc(1 * 100% / 5), transparent 0),conic-gradient(from 139.50358554943523deg at 6.694434343817083% 37.69537974142411%, #ED8936, calc(2 * 100% / 5), transparent 0),conic-gradient(from 40.860192724750235deg at 68.29069678970299% 29.567825600060573%, #FC8181, calc(3 * 100% / 5), transparent 0),conic-gradient(from 24.61693842743843deg at 86.02634812364855% 21.61545496915476%, #742A2A, calc(4 * 100% / 5), transparent 0)"
                      title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
                <div
                  class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                       
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                          data-testid="address__wallet-name"
                        >
                          Delegate 3
                        </span>
                        <span
                          class="text-theme-neutral-400 font-semibold text-xl"
                          data-testid="address__wallet-address"
                        >
                          FAhFJK...SJKDFJ
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                    data-testid="Avatar"
                  >
                    <img
                      src="data:image/svg+xml;utf8,conic-gradient(from 65.5403716378373deg at 40.01343193577338% 30.760975456059626%, #2C7A7B, calc(0 * 100% / 5), transparent 0),conic-gradient(from 204.1106359335532deg at 31.220176312383213% 61.41400320012138%, #E53E3E, calc(1 * 100% / 5), transparent 0),conic-gradient(from 384.62337467082557deg at 75.08232859288681% 63.8389968240588%, #9B2C2C, calc(2 * 100% / 5), transparent 0),conic-gradient(from 174.8116810047629deg at 5.408026736841311% 30.17827802790744%, #F6AD55, calc(3 * 100% / 5), transparent 0),conic-gradient(from 431.5712476050348deg at 17.65593017358963% 42.15021743819777%, #FEB2B2, calc(4 * 100% / 5), transparent 0)"
                      title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Amount
            </div>
            <div
              class="mt-2 font-semibold"
            >
              0.09660435 ARK
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger"
          >
            <div
              class="sc-AxirZ cZokSJ bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhCb liaKlj"
                height="50"
                width="50"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Transaction Type
            </div>
            <div
              class="mt-2 font-semibold"
            >
              Vote
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger"
          >
            <div
              class="sc-AxirZ cZokSJ border-black bg-theme-background"
            >
              <div
                class="sc-AxhCb fxrKLH text-black"
                height="1em"
                width="1em"
              >
                <svg>
                  voted.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
